--- a/examples/index.html
+++ b/examples/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <script type="module">
-    import init from '../target/blocking.js';
+    import init from '../target/polling.js';
     init();
   </script>
 </html>
